@@ -424,18 +424,25 @@ class TestRubyOptions < Test::Unit::TestCase
     end
     require 'timeout'
     result = nil
-    PTY.spawn(EnvUtil.rubybin) do |s, m|
+    s, w = IO.pipe
+    PTY.spawn(EnvUtil.rubybin, out: w) do |r, m|
+      w.close
       m.print("\C-d")
       assert_nothing_raised('[ruby-dev:37798]') do
-        Timeout.timeout(3) {s.read}
+        result = Timeout.timeout(3) {s.read}
       end
     end
-    PTY.spawn(EnvUtil.rubybin) do |s, m|
+    s.close
+    assert_equal("", result, '[ruby-dev:37798]')
+    s, w = IO.pipe
+    PTY.spawn(EnvUtil.rubybin, out: w) do |r, m|
+      w.close
       m.print("$stdin.read; p $stdin.gets\n\C-d")
       m.print("abc\n\C-d")
       m.print("zzz\n")
       result = s.read
     end
-    assert_match(/zzz\r\n"zzz\\n"\r\n\z/, result, '[ruby-core:30910]')
+    s.close
+    assert_equal("\"zzz\\n\"\n", result, '[ruby-core:30910]')
   end
 end
